# type3-pathway

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  revitalize.sh
scripts/microbenchmark/: bandwidth.sh  join.sh  part.sh  skip.sh
scripts/ssb/: ssb.sh
src/: bandwidth.c  join.c  part.c  skip.c
src/inc/: CMakeLists.txt  utils.c  utils.h
